React-helmet-async

--- a/client/index.html
+++ b/client/index.html
@@ -10,6 +10,10 @@
     <link rel="icon" type="image/png" sizes="192x192" href="/android-chrome-192x192.png" />
     <link rel="icon" type="image/png" sizes="512x512" href="/android-chrome-512x512.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+            name="description"
+            content="Galactic Connections - reach for the and connect!"
+    />
     <title>Galactic Connections</title>
   </head>
   <body>
