--- a/client/index.html
+++ b/client/index.html
@@ -15,6 +15,11 @@
             content="Galactic Connections - reach for the and connect!"
     />
     <title>Galactic Connections</title>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Audiowide&family=Orbitron:wght@400..900&family=Roboto+Slab:wght@100..900&display=swap" rel="stylesheet">
+
   </head>
   <body>
     <div id="root"></div>
